src/cosmosdb-sql/generated/CosmosDBSqlParser.js
// Generated from CosmosDBSqlParser.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var grammarFileName = "CosmosDBSqlParser.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, "'false'", 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, "'null'", null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     "'true'", "'udf'", "'undefined'", null, null, null, 
                     null, null, "'Infinity'", "'NaN'", null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, "'C'", 
                     "','", "'.'", "'+'", "'-'", "'*'", "'/'", "'%'", "':'", 
                     "'='", "'>'", "'<'", "'~'", "'|'", "'&'", "'^'", "'?'", 
                     "'{'", "'}'", "'['", "']'", "'('", "')'" ];

var symbolicNames = [ null, "AND", "ARRAY", "AS", "ASC", "BETWEEN", "BY", 
                      "CASE", "CAST", "CONVERT", "CROSS", "DESC", "DISTINCT", 
                      "ELSE", "END", "ESCAPE", "EXISTS", "K_false", "FOR", 
                      "FROM", "GROUP", "HAVING", "IN", "INNER", "INSERT", 
                      "INTO", "IS", "JOIN", "LEFT", "LIKE", "LIMIT", "NOT", 
                      "K_null", "OFFSET", "ON", "OR", "ORDER", "OUTER", 
                      "OVER", "RIGHT", "SELECT", "SET", "THEN", "TOP", "K_true", 
                      "K_udf", "K_undefined", "UPDATE", "VALUE", "WHEN", 
                      "WHERE", "WITH", "Infinity", "NaN", "ABS", "ACOS", 
                      "ARRAY_CONCAT", "ARRAY_CONTAINS", "ARRAY_LENGTH", 
                      "ARRAY_SLICE", "ASIN", "ATAN", "ATN2", "AVG", "CEILING", 
                      "CONCAT", "CONTAINS", "COS", "COT", "COUNT", "DEGREES", 
                      "ENDSWITH", "EXP", "FLOOR", "INDEX_OF", "S_ARRAY", 
                      "IS_BOOL", "IS_DEFINED", "IS_FINITE_NUMBER", "IS_NULL", 
                      "IS_NUMBER", "IS_OBJECT", "IS_PRIMITIVE", "IS_STRING", 
                      "LENGTH", "LOG", "LOG10", "LOWER", "LTRIM", "MAX", 
                      "MIN", "PI", "POWER", "RADIANS", "RAND", "REPLACE", 
                      "REPLICATE", "REVERSE", "ROUND", "RTRIM", "SIGN", 
                      "SIN", "SQRT", "SQUARE", "ST_DISTANCE", "ST_INTERSECTS", 
                      "ST_ISVALID", "ST_ISVALIDDETAILED", "ST_WITHIN", "STARTSWITH", 
                      "SUBSTRING", "SUM", "TAN", "TRUNC", "UPPER", "SPACE", 
                      "COMMENTS", "ID", "NUMBER", "COL", "COMMA", "DOT", 
                      "ADD", "SUB", "MUL", "DIV", "MOD", "COLON", "EQUAL", 
                      "GREATER", "LESS", "BIT_NOT_OP", "BIT_OR_OP", "BIT_AND_OP", 
                      "BIT_XOR_OP", "QUEST", "LEFT_BRACE", "RIGHT_BRACE", 
                      "LEFT_BRACKET", "RIGHT_BRACKET", "LEFT_PARENTHESIS", 
                      "RIGHT_PARENTHESIS", "QUOTE" ];

var ruleNames =  [ "root", "sql_query", "select_clause", "top_spec", "from_clause", 
                   "where_clause", "orderby_clause", "selection", "select_value_spec", 
                   "select_list", "select_item", "select_alias", "orderby_item_list", 
                   "orderby_item", "from_specification", "primary_from_specification", 
                   "input_alias", "input_collection", "relative_path", "relative_path_segment", 
                   "array_item_list", "array_create_expression", "property_name", 
                   "object_property", "object_property_list", "object_create_expression", 
                   "function_arg_list", "sys_function_name", "udf_function_name", 
                   "function_call_expression", "scalar_expression", "logical_scalar_expression", 
                   "between_scalar_expression", "in_scalar_expression", 
                   "exists_scalar_expression", "array_scalar_expression", 
                   "in_scalar_expression_item_list", "binary_expression", 
                   "unary_expression", "primary_expression", "constant", 
                   "array_constant", "array_constant_list", "object_constant", 
                   "object_constant_item", "object_constant_items" ];

function CosmosDBSqlParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

CosmosDBSqlParser.prototype = Object.create(antlr4.Parser.prototype);
CosmosDBSqlParser.prototype.constructor = CosmosDBSqlParser;

Object.defineProperty(CosmosDBSqlParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

CosmosDBSqlParser.EOF = antlr4.Token.EOF;
CosmosDBSqlParser.AND = 1;
CosmosDBSqlParser.ARRAY = 2;
CosmosDBSqlParser.AS = 3;
CosmosDBSqlParser.ASC = 4;
CosmosDBSqlParser.BETWEEN = 5;
CosmosDBSqlParser.BY = 6;
CosmosDBSqlParser.CASE = 7;
CosmosDBSqlParser.CAST = 8;
CosmosDBSqlParser.CONVERT = 9;
CosmosDBSqlParser.CROSS = 10;
CosmosDBSqlParser.DESC = 11;
CosmosDBSqlParser.DISTINCT = 12;
CosmosDBSqlParser.ELSE = 13;
CosmosDBSqlParser.END = 14;
CosmosDBSqlParser.ESCAPE = 15;
CosmosDBSqlParser.EXISTS = 16;
CosmosDBSqlParser.K_false = 17;
CosmosDBSqlParser.FOR = 18;
CosmosDBSqlParser.FROM = 19;
CosmosDBSqlParser.GROUP = 20;
CosmosDBSqlParser.HAVING = 21;
CosmosDBSqlParser.IN = 22;
CosmosDBSqlParser.INNER = 23;
CosmosDBSqlParser.INSERT = 24;
CosmosDBSqlParser.INTO = 25;
CosmosDBSqlParser.IS = 26;
CosmosDBSqlParser.JOIN = 27;
CosmosDBSqlParser.LEFT = 28;
CosmosDBSqlParser.LIKE = 29;
CosmosDBSqlParser.LIMIT = 30;
CosmosDBSqlParser.NOT = 31;
CosmosDBSqlParser.K_null = 32;
CosmosDBSqlParser.OFFSET = 33;
CosmosDBSqlParser.ON = 34;
CosmosDBSqlParser.OR = 35;
CosmosDBSqlParser.ORDER = 36;
CosmosDBSqlParser.OUTER = 37;
CosmosDBSqlParser.OVER = 38;
CosmosDBSqlParser.RIGHT = 39;
CosmosDBSqlParser.SELECT = 40;
CosmosDBSqlParser.SET = 41;
CosmosDBSqlParser.THEN = 42;
CosmosDBSqlParser.TOP = 43;
CosmosDBSqlParser.K_true = 44;
CosmosDBSqlParser.K_udf = 45;
CosmosDBSqlParser.K_undefined = 46;
CosmosDBSqlParser.UPDATE = 47;
CosmosDBSqlParser.VALUE = 48;
CosmosDBSqlParser.WHEN = 49;
CosmosDBSqlParser.WHERE = 50;
CosmosDBSqlParser.WITH = 51;
CosmosDBSqlParser.Infinity = 52;
CosmosDBSqlParser.NaN = 53;
CosmosDBSqlParser.ABS = 54;
CosmosDBSqlParser.ACOS = 55;
CosmosDBSqlParser.ARRAY_CONCAT = 56;
CosmosDBSqlParser.ARRAY_CONTAINS = 57;
CosmosDBSqlParser.ARRAY_LENGTH = 58;
CosmosDBSqlParser.ARRAY_SLICE = 59;
CosmosDBSqlParser.ASIN = 60;
CosmosDBSqlParser.ATAN = 61;
CosmosDBSqlParser.ATN2 = 62;
CosmosDBSqlParser.AVG = 63;
CosmosDBSqlParser.CEILING = 64;
CosmosDBSqlParser.CONCAT = 65;
CosmosDBSqlParser.CONTAINS = 66;
CosmosDBSqlParser.COS = 67;
CosmosDBSqlParser.COT = 68;
CosmosDBSqlParser.COUNT = 69;
CosmosDBSqlParser.DEGREES = 70;
CosmosDBSqlParser.ENDSWITH = 71;
CosmosDBSqlParser.EXP = 72;
CosmosDBSqlParser.FLOOR = 73;
CosmosDBSqlParser.INDEX_OF = 74;
CosmosDBSqlParser.S_ARRAY = 75;
CosmosDBSqlParser.IS_BOOL = 76;
CosmosDBSqlParser.IS_DEFINED = 77;
CosmosDBSqlParser.IS_FINITE_NUMBER = 78;
CosmosDBSqlParser.IS_NULL = 79;
CosmosDBSqlParser.IS_NUMBER = 80;
CosmosDBSqlParser.IS_OBJECT = 81;
CosmosDBSqlParser.IS_PRIMITIVE = 82;
CosmosDBSqlParser.IS_STRING = 83;
CosmosDBSqlParser.LENGTH = 84;
CosmosDBSqlParser.LOG = 85;
CosmosDBSqlParser.LOG10 = 86;
CosmosDBSqlParser.LOWER = 87;
CosmosDBSqlParser.LTRIM = 88;
CosmosDBSqlParser.MAX = 89;
CosmosDBSqlParser.MIN = 90;
CosmosDBSqlParser.PI = 91;
CosmosDBSqlParser.POWER = 92;
CosmosDBSqlParser.RADIANS = 93;
CosmosDBSqlParser.RAND = 94;
CosmosDBSqlParser.REPLACE = 95;
CosmosDBSqlParser.REPLICATE = 96;
CosmosDBSqlParser.REVERSE = 97;
CosmosDBSqlParser.ROUND = 98;
CosmosDBSqlParser.RTRIM = 99;
CosmosDBSqlParser.SIGN = 100;
CosmosDBSqlParser.SIN = 101;
CosmosDBSqlParser.SQRT = 102;
CosmosDBSqlParser.SQUARE = 103;
CosmosDBSqlParser.ST_DISTANCE = 104;
CosmosDBSqlParser.ST_INTERSECTS = 105;
CosmosDBSqlParser.ST_ISVALID = 106;
CosmosDBSqlParser.ST_ISVALIDDETAILED = 107;
CosmosDBSqlParser.ST_WITHIN = 108;
CosmosDBSqlParser.STARTSWITH = 109;
CosmosDBSqlParser.SUBSTRING = 110;
CosmosDBSqlParser.SUM = 111;
CosmosDBSqlParser.TAN = 112;
CosmosDBSqlParser.TRUNC = 113;
CosmosDBSqlParser.UPPER = 114;
CosmosDBSqlParser.SPACE = 115;
CosmosDBSqlParser.COMMENTS = 116;
CosmosDBSqlParser.ID = 117;
CosmosDBSqlParser.NUMBER = 118;
CosmosDBSqlParser.COL = 119;
CosmosDBSqlParser.COMMA = 120;
CosmosDBSqlParser.DOT = 121;
CosmosDBSqlParser.ADD = 122;
CosmosDBSqlParser.SUB = 123;
CosmosDBSqlParser.MUL = 124;
CosmosDBSqlParser.DIV = 125;
CosmosDBSqlParser.MOD = 126;
CosmosDBSqlParser.COLON = 127;
CosmosDBSqlParser.EQUAL = 128;
CosmosDBSqlParser.GREATER = 129;
CosmosDBSqlParser.LESS = 130;
CosmosDBSqlParser.BIT_NOT_OP = 131;
CosmosDBSqlParser.BIT_OR_OP = 132;
CosmosDBSqlParser.BIT_AND_OP = 133;
CosmosDBSqlParser.BIT_XOR_OP = 134;
CosmosDBSqlParser.QUEST = 135;
CosmosDBSqlParser.LEFT_BRACE = 136;
CosmosDBSqlParser.RIGHT_BRACE = 137;
CosmosDBSqlParser.LEFT_BRACKET = 138;
CosmosDBSqlParser.RIGHT_BRACKET = 139;
CosmosDBSqlParser.LEFT_PARENTHESIS = 140;
CosmosDBSqlParser.RIGHT_PARENTHESIS = 141;
CosmosDBSqlParser.QUOTE = 142;

CosmosDBSqlParser.RULE_root = 0;
CosmosDBSqlParser.RULE_sql_query = 1;
CosmosDBSqlParser.RULE_select_clause = 2;
CosmosDBSqlParser.RULE_top_spec = 3;
CosmosDBSqlParser.RULE_from_clause = 4;
CosmosDBSqlParser.RULE_where_clause = 5;
CosmosDBSqlParser.RULE_orderby_clause = 6;
CosmosDBSqlParser.RULE_selection = 7;
CosmosDBSqlParser.RULE_select_value_spec = 8;
CosmosDBSqlParser.RULE_select_list = 9;
CosmosDBSqlParser.RULE_select_item = 10;
CosmosDBSqlParser.RULE_select_alias = 11;
CosmosDBSqlParser.RULE_orderby_item_list = 12;
CosmosDBSqlParser.RULE_orderby_item = 13;
CosmosDBSqlParser.RULE_from_specification = 14;
CosmosDBSqlParser.RULE_primary_from_specification = 15;
CosmosDBSqlParser.RULE_input_alias = 16;
CosmosDBSqlParser.RULE_input_collection = 17;
CosmosDBSqlParser.RULE_relative_path = 18;
CosmosDBSqlParser.RULE_relative_path_segment = 19;
CosmosDBSqlParser.RULE_array_item_list = 20;
CosmosDBSqlParser.RULE_array_create_expression = 21;
CosmosDBSqlParser.RULE_property_name = 22;
CosmosDBSqlParser.RULE_object_property = 23;
CosmosDBSqlParser.RULE_object_property_list = 24;
CosmosDBSqlParser.RULE_object_create_expression = 25;
CosmosDBSqlParser.RULE_function_arg_list = 26;
CosmosDBSqlParser.RULE_sys_function_name = 27;
CosmosDBSqlParser.RULE_udf_function_name = 28;
CosmosDBSqlParser.RULE_function_call_expression = 29;
CosmosDBSqlParser.RULE_scalar_expression = 30;
CosmosDBSqlParser.RULE_logical_scalar_expression = 31;
CosmosDBSqlParser.RULE_between_scalar_expression = 32;
CosmosDBSqlParser.RULE_in_scalar_expression = 33;
CosmosDBSqlParser.RULE_exists_scalar_expression = 34;
CosmosDBSqlParser.RULE_array_scalar_expression = 35;
CosmosDBSqlParser.RULE_in_scalar_expression_item_list = 36;
CosmosDBSqlParser.RULE_binary_expression = 37;
CosmosDBSqlParser.RULE_unary_expression = 38;
CosmosDBSqlParser.RULE_primary_expression = 39;
CosmosDBSqlParser.RULE_constant = 40;
CosmosDBSqlParser.RULE_array_constant = 41;
CosmosDBSqlParser.RULE_array_constant_list = 42;
CosmosDBSqlParser.RULE_object_constant = 43;
CosmosDBSqlParser.RULE_object_constant_item = 44;
CosmosDBSqlParser.RULE_object_constant_items = 45;

function RootContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CosmosDBSqlParser.RULE_root;
    return this;
}

RootContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RootContext.prototype.constructor = RootContext;

RootContext.prototype.sql_query = function() {
    return this.getTypedRuleContext(Sql_queryContext,0);
};




CosmosDBSqlParser.RootContext = RootContext;

CosmosDBSqlParser.prototype.root = function() {

    var localctx = new RootContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, CosmosDBSqlParser.RULE_root);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 92;
        this.sql_query();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Sql_queryContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CosmosDBSqlParser.RULE_sql_query;
    return this;
}

Sql_queryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Sql_queryContext.prototype.constructor = Sql_queryContext;

Sql_queryContext.prototype.select_clause = function() {
    return this.getTypedRuleContext(Select_clauseContext,0);
};

Sql_queryContext.prototype.from_clause = function() {
    return this.getTypedRuleContext(From_clauseContext,0);
};

Sql_queryContext.prototype.where_clause = function() {
    return this.getTypedRuleContext(Where_clauseContext,0);
};

Sql_queryContext.prototype.orderby_clause = function() {
    return this.getTypedRuleContext(Orderby_clauseContext,0);
};




CosmosDBSqlParser.Sql_queryContext = Sql_queryContext;

CosmosDBSqlParser.prototype.sql_query = function() {

    var localctx = new Sql_queryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, CosmosDBSqlParser.RULE_sql_query);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 94;
        this.select_clause();
        this.state = 96;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===CosmosDBSqlParser.FROM) {
            this.state = 95;
            this.from_clause();
        }

        this.state = 99;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===CosmosDBSqlParser.WHERE) {
            this.state = 98;
            this.where_clause();
        }

        this.state = 102;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===CosmosDBSqlParser.ORDER) {
            this.state = 101;
            this.orderby_clause();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Select_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CosmosDBSqlParser.RULE_select_clause;
    return this;
}

Select_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Select_clauseContext.prototype.constructor = Select_clauseContext;

Select_clauseContext.prototype.SELECT = function() {
    return this.getToken(CosmosDBSqlParser.SELECT, 0);
};

Select_clauseContext.prototype.selection = function() {
    return this.getTypedRuleContext(SelectionContext,0);
};

Select_clauseContext.prototype.top_spec = function() {
    return this.getTypedRuleContext(Top_specContext,0);
};




CosmosDBSqlParser.Select_clauseContext = Select_clauseContext;

CosmosDBSqlParser.prototype.select_clause = function() {

    var localctx = new Select_clauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, CosmosDBSqlParser.RULE_select_clause);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 104;
        this.match(CosmosDBSqlParser.SELECT);
        this.state = 106;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===CosmosDBSqlParser.TOP) {
            this.state = 105;
            this.top_spec();
        }

        this.state = 108;
        this.selection();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Top_specContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CosmosDBSqlParser.RULE_top_spec;
    return this;
}

Top_specContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Top_specContext.prototype.constructor = Top_specContext;

Top_specContext.prototype.TOP = function() {
    return this.getToken(CosmosDBSqlParser.TOP, 0);
};

Top_specContext.prototype.NUMBER = function() {
    return this.getToken(CosmosDBSqlParser.NUMBER, 0);
};




CosmosDBSqlParser.Top_specContext = Top_specContext;

CosmosDBSqlParser.prototype.top_spec = function() {

    var localctx = new Top_specContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, CosmosDBSqlParser.RULE_top_spec);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 110;
        this.match(CosmosDBSqlParser.TOP);
        this.state = 111;
        this.match(CosmosDBSqlParser.NUMBER);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function From_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CosmosDBSqlParser.RULE_from_clause;
    return this;
}

From_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
From_clauseContext.prototype.constructor = From_clauseContext;

From_clauseContext.prototype.FROM = function() {
    return this.getToken(CosmosDBSqlParser.FROM, 0);
};

From_clauseContext.prototype.from_specification = function() {
    return this.getTypedRuleContext(From_specificationContext,0);
};




CosmosDBSqlParser.From_clauseContext = From_clauseContext;

CosmosDBSqlParser.prototype.from_clause = function() {

    var localctx = new From_clauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, CosmosDBSqlParser.RULE_from_clause);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 113;
        this.match(CosmosDBSqlParser.FROM);
        this.state = 114;
        this.from_specification(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Where_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CosmosDBSqlParser.RULE_where_clause;
    return this;
}

Where_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Where_clauseContext.prototype.constructor = Where_clauseContext;

Where_clauseContext.prototype.WHERE = function() {
    return this.getToken(CosmosDBSqlParser.WHERE, 0);
};

Where_clauseContext.prototype.scalar_expression = function() {
    return this.getTypedRuleContext(Scalar_expressionContext,0);
};




CosmosDBSqlParser.Where_clauseContext = Where_clauseContext;

CosmosDBSqlParser.prototype.where_clause = function() {

    var localctx = new Where_clauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, CosmosDBSqlParser.RULE_where_clause);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 116;
        this.match(CosmosDBSqlParser.WHERE);
        this.state = 117;
        this.scalar_expression();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Orderby_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CosmosDBSqlParser.RULE_orderby_clause;
    return this;
}

Orderby_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Orderby_clauseContext.prototype.constructor = Orderby_clauseContext;

Orderby_clauseContext.prototype.ORDER = function() {
    return this.getToken(CosmosDBSqlParser.ORDER, 0);
};

Orderby_clauseContext.prototype.BY = function() {
    return this.getToken(CosmosDBSqlParser.BY, 0);
};

Orderby_clauseContext.prototype.orderby_item_list = function() {
    return this.getTypedRuleContext(Orderby_item_listContext,0);
};




CosmosDBSqlParser.Orderby_clauseContext = Orderby_clauseContext;

CosmosDBSqlParser.prototype.orderby_clause = function() {

    var localctx = new Orderby_clauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, CosmosDBSqlParser.RULE_orderby_clause);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 119;
        this.match(CosmosDBSqlParser.ORDER);
        this.state = 120;
        this.match(CosmosDBSqlParser.BY);
        this.state = 121;
        this.orderby_item_list(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SelectionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CosmosDBSqlParser.RULE_selection;
    return this;
}

SelectionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SelectionContext.prototype.constructor = SelectionContext;

SelectionContext.prototype.select_list = function() {
    return this.getTypedRuleContext(Select_listContext,0);
};

SelectionContext.prototype.select_value_spec = function() {
    return this.getTypedRuleContext(Select_value_specContext,0);
};

SelectionContext.prototype.MUL = function() {
    return this.getToken(CosmosDBSqlParser.MUL, 0);
};




CosmosDBSqlParser.SelectionContext = SelectionContext;

CosmosDBSqlParser.prototype.selection = function() {
